# rtj

./: .gitignore  CMakeLists.txt  Makefile
include/rtj/: json.hpp
src/: json.cpp  serializer.cpp
src/deserializer/: deserializeri.cpp  deserializers.cpp
test/source/direct/: array.json  object.json
test/src/deserializer/: deserializeri_direct_value.cpp  deserializeri_from_file.cpp  deserializeri_litteral_str.cpp
test/src/serializer/: serializer_direct.cpp
